# Isaac-Robot-MMD

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  pyrightconfig.example.json  pyrightconfig.json  setup_env.bat  setup_env.sh
.cursor/skills/isaac-root-state-quaternion-wxyz/: SKILL.md
assets/: g1_29dof_o6_hand_V3.usd  g1_29dof_o6_hand_nomimic.usd
assets/g1_29dof_o6_hand_extracted/: main.usdc  main_nomimic.usd
assets/g1_29dof_o6_hand_extracted/SubUSDs/: g1_29dof_rev_1_0_with_o6_hand.usd  (+5 more)
media/: README.md
robot_mmd/: OVERVIEW.md  __init__.py
robot_mmd/media/: README.md
robot_mmd/my_task/: __init__.py  g1_29dof_o6_cfg.py  g1_dance_track_env_cfg.py  g1_replay_env_cfg.py  g1_stand_env_cfg.py  g1_train_env_cfg.py
robot_mmd/train_workflow/: arm_retarget.py  audio_util.py  csv_motion_loader.py  dances_config.example.yaml  dances_config.yaml  extrinsic_euler.py  g1_deploy_actuator_cfg.py  g1_joint_axis_map_raw.py  g1_vmd_0_replay.py  g1_vmd_1_train.py  g1_vmd_2_eval.py  generate_joint_mapping_test_csv.py  mapping_ui.py  play_g1_dance_track.py  reduce_wav_gain.py  retarget_arm.py  retarget_basis.py  retarget_leg.py  retarget_unitreeG1.py  run_g1_mmd_playback.py  run_stand copy.py  run_stand.py  train_g1_dance_track.py  trans_util.py  ui_mapping.py  ui_retargeting_tune.py  vmd_2_csv.py  vmd_reader.py
source/: OVERVIEW.md  __init__.py  paths.py
source/my_task/: __init__.py  g1_replay_env_cfg.py  g1_train_env_cfg.py
source/train_workflow/: dances_config.example.yaml  g1_vmd_0_replay.py  g1_vmd_1_train.py  g1_vmd_2_eval.py
(+114 files in other folders)
