[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_mmd"
version = "0.1.0"
description = "Unitree G1 MMD retargeting and dance tracking on Isaac Lab"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "jasy" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["robot_mmd*"]
